[package]
name = "tcp_over_websocket"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8"
anyhow = "1"
futures-util = "0.3"
num-bigint = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["cookies", "json", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "time"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
winit = "0.30"
wry = "0.55"
