[package]
name = "tcp_over_websocket"
version = "0.3.2"
edition = "2024"

[dependencies]
aes = "0.8"
anyhow = "1"
futures-util = "0.3"
num-bigint = "0.4"
reqwest = { version = "0.12", default-features = false, features = [
	"cookies",
	"json",
	"rustls-tls",
] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = { version = "1", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["jpeg"] }
tokio = { version = "1", features = [
	"io-util",
	"macros",
	"net",
	"rt-multi-thread",
	"signal",
	"time",
] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
